# SequiasHistoricasLLM

./: .gitignore  00_test_install.py  01_check_file_patterns.py  01_clean_files.py  02_clean_pages.py  02_parse_cvs.py  03_parse_cvs.py  03a_search_no_loc.py  03b_search_no_agg.py  04_build_work_ds.py  04b_balance_classify.py  04b_build_work_ds.py  04c_balance_classify.py  05_launch_all_local.sh  05_launch_ciena.py  05_sbach.sh  05_sbatch.sh  05a_build_full_ds_csv.py  05b_build_full_ds.py  05b_launch_all_cesga.sh  06_launch_all_local.sh  06_launch_cesga.sh  06_launch_ciena.py  06_launch_local.sh  06_launch_local_040.sh  06_sbatch.sh  06a_repport_detect.py  06b_launch_all_cesga.sh  06b_repport_classify.py  07a_repport_detect.py  07b_repport_classify.py  07c_extract_detect_FpFn.py  07d_hist_pages.py  07d_index_ds.py  08a_indexds.py  08b_report_index.py  08c_report_index2.py  08c_report_index_hist.py  08d_report_index_hist.py  08d_report_index_hm.py  (+16 more)
.devcontainer/: devcontainer.json  on-create-command.sh
Configs030/: Readme.md  bestf1.config.yaml  efficient.config.yaml  fastest.config.yaml
data/: bestf1.config.yaml  classify-fastest.config.yaml  classify_extra.csv  detect-fastest.config.yaml  efficient.config.yaml  full_ds.csv  models.yaml  work_ds.csv
reports/: full-classify.html  full-detect.html  work-classify.html  work-detect.html
repports/: full-classify.html  full-detect.html  work-classify.html  work-detect.html
tools/: 40_genmodels.py  41_gen_dates_cvs.py  50_make_repports.sh  60_package_cesga.sh  61_prepare_cesga_dirs.sh  62_start_ollama.sh  70_get_stats.py  (+11 more)
(+17 files in other folders)
